--- a/platformio.ini
+++ b/platformio.ini
@@ -8,35 +8,22 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-src_dir = main
-
 [env:esp32]
 platform = espressif32
 board = ttgo-t-beam
 framework = arduino
+build_flags = -Wall -Wextra -Wno-missing-field-initializers -O3 -Wl,-Map,.pio/build/esp32/output.map
+	-D hal_init=LMICHAL_init
+	-D ARDUINO_LMIC_PROJECT_CONFIG_H_SUPPRESS
+	-D CFG_sx1276_radio=1
+	-D CFG_eu868=1
 
-; note: we add src to our include search path so that lmic_project_config can override
-build_flags = -Wall -Wextra -Wno-missing-field-initializers -O3 -Wl,-Map,.pio/build/esp32/output.map 
-  ; -DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-
-  -D hal_init=LMICHAL_init           ; Workaround for naming conflict of function hal_init
-
-  ; Diable lmic_project_config.h, so that we can configure stuff here instead
-  -D ARDUINO_LMIC_PROJECT_CONFIG_H_SUPPRESS
-
-  ; Configure radio: enable exactly one of these
-  ; -D CFG_sx1272_radio=1            ; Use for SX1272 radio
-  -D CFG_sx1276_radio=1              ; Use for SX1276 radio
-
-  ; Configure region: enable exactly one of these
-  -D CFG_us915=1
-  ; -D CFG_eu868=1
+extra_scripts = pre:credentials.py
 
 monitor_speed = 115200
-
-lib_deps =
-  https://github.com/mcci-catena/arduino-lmic
-  https://github.com/mikalhart/TinyGPSPlus
-  https://github.com/ThingPulse/esp8266-oled-ssd1306
-  https://github.com/lewisxhe/AXP202X_Library
+lib_deps = 
+	https://github.com/mcci-catena/arduino-lmic
+	https://github.com/mikalhart/TinyGPSPlus
+	https://github.com/ThingPulse/esp8266-oled-ssd1306
+	https://github.com/lewisxhe/AXP202X_Library
+	sparkfun/SparkFun u-blox Arduino Library@^1.8.11
